# sandish

./: .gitmodules  BUGS.txt  CMakeLists.txt  README  board.c  board.h  cam.c  cam.h  cursor.c  cursor.h  draw.c  draw.h  list.c  list.h  lualink.c  lualink.h  main.c  matrix.c  matrix.h  panic.c  panic.h  registry.c  registry.h  rule.h  screen.c  screen.h  tick.c  tick.h  utils.c  utils.h  vec4.c  vec4.h
gl3w/: CMakeLists.txt  CMakeLists.txt~
lua/: concrete.lua  debug.lua  main.lua  man.lua  sand.lua  sandstone.lua  utils.lua  water.lua
res/: concrete.frag.glsl  debug.frag.glsl  fragment.glsl  geometry.glsl  man.frag.glsl  sand.frag.glsl  sandstone.frag.glsl  util.frag.glsl  vertex.glsl  water.frag.glsl
res/ssao/: fragment.glsl  vertex.glsl
